examples/type_system/failing/169_match_disagreement_first_arm_unresolved_still_e300.flx
fn main() -> Unit {
    let x = mystery_value
    let y: Int = match 1 {
        0 -> x,
        1 -> 10,
        _ -> "oops",
    }
}
